# anuga_core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  INSTALL.rst  README.rst  VERSIONING.md  _git_version.py  appveyor.yml  conftest.py  create_revision_file.py  meson.build  meson_options.txt  nci-requirements.txt  print_version.py  pyproject.toml  req_cupy.txt  requirements.txt  setup.py  setup_nvcc.py
anuga/: __init__.py  _version.py.in  anuga_exceptions.py  config.py  error_api.py  extras.py  meson.build  revision.py
anuga/abstract_2d_finite_volumes/: __init__.py  basic_mesh.py  ermapper_grids.py  file_function.py  gauge.py  general_mesh.py  generic_boundary_conditions.py  generic_domain.py  mesh_factory.py  mesh_factory_ext.pyx  meson.build  neighbour_mesh.py  neighbour_mesh_ext.pyx  neighbour_table.cpp  neighbour_table_ext.pyx  pmesh2domain.c  pmesh2domain.py  quantity.c  quantity.py  quantity_openmp.c  quantity_openmp_ext.pyx  region.py  tag_region.py  util.py
anuga/advection/: __init__.py  advection.c  advection.py
anuga/alpha_shape/: alpha_shape.py
anuga/caching/: __init__.py  caching.py  dummy_classes_for_testing.py
anuga/coordinate_transforms/: __init__.py  geo_reference.py  lat_long_UTM_conversion.py  point.py  redfearn.py
anuga/culvert_flows/: __init__.py  culvert_class.py  culvert_polygons.py  culvert_routines.py  meson.build  new_culvert_class.py
anuga/damage_modelling/: __init__.py  exposure.py  inundation_damage.py
anuga/file/: __init__.py  csv_file.py  mux.py  netcdf.py  pts.py  structure.h  sts.py  sww.py  ungenerate.py  urs.c  urs.py
anuga/file_conversion/: __init__.py  asc2dem.py  calc_grid_values.c  csv2sts.py  dem2array.py  dem2dem.py  dem2pts.py  esri2sww.py  ferret2sww.py  file_conversion.py  grd2array.py  llasc2pts.py  meson.build  sdf2pts.py  sts2sww_mesh.py  sww2array.py  sww2dem.py  sww2dem_new.py  sww2pts.py  sww2vtu.py  tif2array.py  tif2point_values.py  urs2nc.py  urs2sts.py  urs2sww.py  urs2txt.py  xya2pts.py
anuga/fit_interpolate/: __init__.py  benchmark_least_squares.py  fit.py  fitsmooth.c  fitsmooth_ext.pyx  general_fit_interpolate.py  interpolate.py  interpolate2d.py  meson.build  profile_long_benchmark.py  run_long_benchmark.py  ticket178_benchmark.py
anuga/geometry/: __init__.py  aabb.py  meson.build  polygon.c  polygon.py  polygon_ext.pyx  polygon_function.py  quad.py
anuga/geospatial_data/: __init__.py  geospatial_data.py
anuga/lib/: __init__.py  add_csv_header.py  maxasc.py  order_boundary.py
anuga/load_mesh/: loadASCII.py
anuga/mesh_engine/: mesh_engine.py
anuga/operators/: __init__.py  barometric_pressure.py  base_operator.py  boundary_flux_integral_operator.py  change_friction_operator.py  collect_max_quantities_operator.py  collect_max_stage_operator.py  elliptic_operator.py  erosion_operators.py  kinematic_viscosity_operator.c  kinematic_viscosity_operator.py  mannings_operator.c  mannings_operator.py  meson.build  rate_operators.py  sanddune_erosion_operator.py  set_elevation.py  set_elevation_operator.py  set_friction_operators.py  set_quantity.py  set_quantity_operator.py  set_stage.py  set_stage_operator.py  set_w_uh_vh_operator.py  wind_stress_operator.py
anuga/parallel/: __init__.py  anuga_core.code-workspace  config.py  distribute_mesh.py  distribute_mesh_ext.pyx  meson.build  parallel_advection.py  parallel_api.py  parallel_boyd_box_operator.py  parallel_boyd_pipe_operator.py  parallel_generic_communications.py  parallel_inlet.py  parallel_inlet_enquiry.py  parallel_inlet_operator.py  parallel_internal_boundary_operator.py  parallel_meshes.py  parallel_operator_factory.py  parallel_shallow_water.py  parallel_structure_operator.py  parallel_weir_orifice_trapezoid_operator.py  parmetis_ext.pyx  partitioning.py  print_stats.py  sequential_distribute.py
anuga/pmesh/: AppShell.py  ProgressBar.py  exesetup.py  mesh.py  mesh_interface.py  mesh_quadtree.py  timing.py  toolbarbutton.py  ungen_example.py  visualmesh.py
anuga/rain/: __init__.py  arr_hub_rain.py  arr_ifd_rain.py  calibrated_radar_rain.py  meson.build  raster_rate_operator.py  raster_time_slice_data.py  run_calibrated_radar_rain.py  run_raster_time_slice_data.py
anuga/scenario/: make_spatially_averaged_function.py  meson.build  parse_input_data.py  parse_input_data_toml.py  prepare_data.py  raster_outputs.py  read_boundary_tags_line_shapefile.py  setup_boundary_conditions.py  setup_bridges.py  setup_culverts.py  setup_initial_conditions.py  setup_inlets.py  setup_mesh.py  setup_pumping_stations.py  setup_rainfall.py  setup_riverwalls.py  setup_weirs.py  spatially_averaged_function.py
anuga/shallow_water/: __init__.py  boundaries.py  checkpoint.py  cuda_anuga.cu  domain_c_struct.c  forcing.py  friction.py  meson.build  most2nc.py  setup.py  shallow_water_domain.py  sw_domain.h  sw_domain_cuda.py  sw_domain_cupy.py  sw_domain_ext.pyx  sw_domain_gpu.c  sw_domain_gpu.h  sw_domain_gpu_ext.pyx  sw_domain_gpu_omp.py  sw_domain_interface.py  sw_domain_math.h  sw_domain_openacc.c  sw_domain_openacc_ext.pyx  sw_domain_openmp.c  sw_domain_openmp_ext.pyx  sw_domain_orig.c  sw_domain_orig_ext.pyx  sw_domain_simd.c  sw_domain_simd_ext.pyx  sww_interrogate.py  tsh2sww.py
anuga/simulation/: __init__.py  meson.build  simulation.py
anuga/structures/: __init__.py  boyd_box_operator.py  boyd_box_operator_Amended3.py  boyd_pipe_operator.py  gpu_culvert_manager.py  inlet.py  inlet_enquiry.py  inlet_operator.py  internal_boundary_functions.py  internal_boundary_operator.py  meson.build  riverwall.py  structure_operator.py  weir_orifice_trapezoid_operator.py
anuga/tsunami_source/: __init__.py  eqf.py  eqf_v2.py  okada_tsunami.py  smf.py  tsunami_okada.py
anuga/utilities/: __init__.py  _animate_worker.py  animate.py  anuga_constants.h  anuga_runtime.h  anuga_typedefs.h  argparsing.py  cg.c  cg_ext.pyx  cg_solve.py  create_benchmark_csvfile.py  csv_tools.py  data_audit.py  data_audit_wrapper.py  file_utils.py  function_utils.py  interp.py  log.py  log_analyser.py  (+28 more)
standalone/: .gitignore  CMakeLists.txt  README.md
(+571 files in other folders)
