# ANUGA build options

# New OpenMP implementation (multiprocessor_mode=2)
# This builds the modern OpenMP-based code that can run on GPU or CPU
option('new_omp', type: 'boolean', value: false,
       description: 'Enable new OpenMP implementation (mode 2) - can target GPU or CPU')

# GPU offload - when true, targets GPU; when false, runs on CPU multicore
# Only relevant when new_omp=true
option('gpu_offload', type: 'boolean', value: true,
       description: 'Target GPU (true) or CPU multicore (false) for mode 2 code')

# GPU-aware MPI for direct device-to-device communication
option('gpu_aware_mpi', type: 'boolean', value: false,
       description: 'Enable GPU-aware MPI for direct device communication (requires GPU-aware MPI library)')

# GPU architecture/compute capability
# NVIDIA: cc70 (V100), cc80 (A100), cc90 (H100)
# AMD (future): gfx908 (MI100), gfx90a (MI210/MI250), gfx942 (MI300X)
option('gpu_arch', type: 'string', value: 'cc70',
       description: 'GPU architecture: cc70 (V100), cc80 (A100), cc90 (H100), or AMD gfx* targets')
