[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "meson",
    "ninja",
    "Cython",
    "pybind11",
    "numpy",
    "libpython; sys_platform == 'win32'",
]

[project]
name = 'anuga'
dynamic = ['version']
description = 'A set of python modules for tsunami and flood modelling'
readme = 'README.rst'
license-files = ["LICENSE.txt"]
license = "Apache-2.0"
authors = [
  {name = 'Stephen Roberts', email = 'stephen.roberts@anu.edu.au'},
]
requires-python = ">=3.10, <3.15"
dependencies = [
    'numpy>=2.0.0',
    'dill>=0.3.7',
    'matplotlib>=3.7',
    'netCDF4>=1.6',
    'scipy>=1.11',
    'meshpy>=2022.1',
    'pyproj>=3.6',
    'xarray',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.optional-dependencies]
parallel = [
    'mpi4py',
    'pymetis>=2023.1',
]
data = [
    'rasterio',
    'fiona',
    'shapely',
    'xarray',
    'pandas',
    'openpyxl',
    'tomli; python_version < "3.11"',
]
dev = [
    'pytest',
    'psutil',
]

[project.urls]
homepage      = "https://en.wikipedia.org/wiki/ANUGA_Hydro"
documentation = "https://anuga.readthedocs.io"
source        = "https://github.com/anuga-community/anuga_core"
download      = "https://github.com/anuga-community/anuga_core/releases"
tracker       = "https://github.com/anuga-community/anuga_core/issues"


[tool.pytest.ini_options]
minversion = '6.0'
testpaths = [
    'anuga'
]
markers = [
    "slow: marks tests as slow — omit --run-fast to include in the default run",
]

