[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "meson",
    "ninja",
    "Cython",
    "pybind11",
    "numpy",
    "libpython; sys_platform == 'win32'",
]

[project]
name = 'anuga'
dynamic = ['version']
description = 'A set of python modules for tsunami and flood modelling'
readme = 'README.rst'
license-files = ["LICENSE.txt"]
license = "Apache-2.0"
authors = [
  {name = 'Stephen Roberts', email = 'stephen.roberts@anu.edu.au'},
]
requires-python = ">=3.10, <3.15"
dependencies = [
    'numpy>=2.0.0',
    'dill>=0.3.7',
    'matplotlib>=3.7',
    'netCDF4>=1.6',
    'scipy>=1.11',
    'meshpy>=2022.1',
    'pyproj>=3.6',
    'xarray',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.optional-dependencies]
parallel = [
    'mpi4py',
    'pymetis>=2023.1',
]
data = [
    'rasterio',
    'fiona',
    'shapely',
    'xarray',
    'pandas',
    'openpyxl',
    'tomli; python_version < "3.11"',
]
gui = [
    'contextily>=1.3',
    'Pillow>=9.0',
]
dev = [
    'pytest',
    'pytest-cov',
    'pytest-regressions',
    'psutil',
]

[project.urls]
homepage      = "https://en.wikipedia.org/wiki/ANUGA_Hydro"
documentation = "https://anuga.readthedocs.io"
source        = "https://github.com/anuga-community/anuga_core"
download      = "https://github.com/anuga-community/anuga_core/releases"
tracker       = "https://github.com/anuga-community/anuga_core/issues"


[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = [
    # ── High-violation rules deferred for a dedicated cleanup pass ──
    "E501",   # line too long (3002) — fix separately
    "E402",   # module import not at top (331) — ANUGA uses conditional imports
    "E701",   # multiple statements on one line (567)
    "E702",   # statement ends with semicolon (97)
    "E711",   # comparison to None (24) — some intentional
    "E712",   # comparison to True/False (54)
    "E721",   # type comparison (47)
    "E731",   # lambda assignment (30)
    "E741",   # ambiguous variable name (101) — mathematical names l, I, O
    "W191",   # tab indentation (70) — legacy files
    "E101",   # mixed tabs/spaces (legacy files)
    "I001",   # import sort order (915) — too risky to bulk-change
    "UP030",  # format literals (23)
    "UP031",  # printf-style formatting (1830)
    "UP032",  # f-string conversion (31)
    "B006",   # mutable argument default (22) — main ones already fixed
    "B007",   # unused loop control variable (368)
    "B023",   # function uses loop variable (13)
    "B028",   # no-explicit-stacklevel in warnings.warn (15)
    "B904",   # raise without from inside except (147)
    "B905",   # zip() without explicit strict= (103)
    "F401",   # unused import (1705) — handled per-file
    "F403",   # star import (57) — ANUGA uses * imports for domain API
    "F405",   # may be from star import (1405)
    "F811",   # redefined while unused (190) — some intentional
    "F821",   # undefined name (176) — false positives from star imports
    "F841",   # local variable assigned but never used (1034)
]

[tool.ruff.lint.per-file-ignores]
"anuga/__init__.py" = ["F401", "E401"]       # public re-exports
"anuga/*/tests/test_*.py" = ["B017", "B018"] # assertRaises patterns in tests

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = [
    'anuga'
]
markers = [
    "slow: marks tests as slow — omit --run-fast to include in the default run",
]
filterwarnings = [
    # numpy.ndarray size-changed warning is a known side-effect of importing
    # ANUGA's C extensions when numpy was compiled with a different ABI than
    # the running numpy.  It is harmless and appears across the whole suite.
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    # Legacy forcing classes and Culvert_flow are deprecated but their tests
    # intentionally exercise the backward-compatible API.  The warnings use
    # stacklevel=2 so they appear to originate at the call site; match by
    # message text so the filter works regardless of call location.
    "ignore:Inflow is deprecated:DeprecationWarning",
    "ignore:Rainfall is deprecated:DeprecationWarning",
    "ignore:Wind_stress is deprecated:DeprecationWarning",
    "ignore:Barometric_pressure is deprecated:DeprecationWarning",
    "ignore:Culvert_flow_general.*is deprecated:DeprecationWarning",
    "ignore:anuga.culvert_flows is deprecated:DeprecationWarning",
]

