# Contents: Python bindings for rain module

python_sources = [
  '__init__.py',
  'arr_hub_rain.py',
  'arr_ifd_rain.py',
  'calibrated_radar_rain.py',
  'raster_rate_operator.py',
  'raster_time_slice_data.py',
  'run_calibrated_radar_rain.py',
  'run_raster_time_slice_data.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/rain'
)

subdir('tests')
