python_sources = [
    '__init__.py',
    'make_spatially_averaged_function.py',
    'parse_input_data.py',
    'parse_input_data_toml.py',
    'prepare_data.py',
    'raster_outputs.py',
    'read_boundary_tags_line_shapefile.py',
    'setup_boundary_conditions.py',
    'setup_bridges.py',
    'setup_initial_conditions.py',
    'setup_inlets.py',
    'setup_mesh.py',
    'setup_pumping_stations.py',
    'setup_rainfall.py',
    'setup_riverwalls.py',
    'spatially_averaged_function.py',
]

py3.install_sources(
    python_sources,
    subdir: 'anuga/scenario'
)

subdir('tests')
